@@ -4,6 +4,8 @@
 * The code has been splitted into two different binary programs:
   check_memory and check_swap.
 * configure: new option '--with-proc-meminfo=PATH'.
+* check_swap: display on linux the number of swapins and swapouts
+  (since the last boot).
 
 ======================================================================
 
